# rpj-dummy

./: .gitignore  Dockerfile  middleware.ts  package-lock.json  package.json
agent-memory-research/: README.md
agent-memory-research/01-fundamentals/: architectures.md  cognitive-science-roots.md  memory-taxonomy.md
agent-memory-research/02-frameworks/: anthropic-memory-tools.md  frameworks-comparison.md  graphiti.md  langgraph-memory.md  letta-memgpt.md  mem0.md  mempalace.md
agent-memory-research/03-storage-backends/: hybrid-storage-strategies.md  key-value-stores.md  knowledge-graphs.md  vector-databases.md
agent-memory-research/04-practical-setups/: code-examples.md  multi-agent-patterns.md  production-checklist.md  single-agent-patterns.md
agent-memory-research/05-challenges-and-mitigations/: hallucination-contradiction.md  memory-drift.md  security-and-privacy.md  temporal-decay.md
agent-memory-research/06-benchmarks-and-evaluation/: ama-bench.md  evaluation-guide.md  locomo.md  memorybench.md
agent-memory-research/07-emerging-research/: context-engineering.md  future-directions.md  karpathy-llm-wiki.md  reinforcement-learning-memory.md
app/: globals.css  layout.tsx  page.tsx
infra/: Pulumi.yaml  __main__.py  helpers.py  pyproject.toml
infra/tests/: conftest.py  test_helpers.py  test_stack.py
research/neuroscience-memory/: 00-index.md  01-computational-frameworks.md  02-ecog-human-ieceg.md  03-oscillations-mechanisms.md  04-circuits-regions.md  05-models-and-learning.md  06-ai-design-principles.md  07-key-researchers.md  08-references.md  (+8 more)
